Incorporate a styling script
Not everything could be fine-tuned (style-wise) from the folium level.
 The "tweak_style.py" script reads in the "rates.html" file and writes
out to "styled.html" for use in "index.html." I also changed
"index.html" to read in this newly formatted document instead of the
old one.

--- a/styled.html
+++ b/styled.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
-        <script>
+<head>
+<meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+<script>
             L_NO_TOUCH = false;
             L_DISABLE_3D = false;
         </script>
-
-    <style>html, body {width: 100%;height: 100%;margin: 0;padding: 0;}</style>
-    <style>#map {position:absolute;top:0;bottom:0;right:0;left:0;}</style>
-    <script src="https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet.js"></script>
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css"/>
-
-            <meta name="viewport" content="width=device-width,
-                initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-            <style>
+<style>html, body {width: 100%;height: 100%;margin: 0;padding: 0;}</style>
+<style>#map {position:absolute;top:0;bottom:0;right:0;left:0;}</style>
+<script src="https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet.css" rel="stylesheet"/>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" rel="stylesheet"/>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css" rel="stylesheet"/>
+<link href="https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css" rel="stylesheet"/>
+<meta content="width=device-width,
+                initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
+<style>
                 #map_88dc0f05dae54f55a8927d640ca3bbc7 {
                     position: relative;
                     width: 100.0%;
@@ -31,10 +29,8 @@
                     top: 0.0%;
                 }
             </style>
-
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-
-                    <style>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<style>
                         .foliumtooltip {
                             background-color: black; color: white; font-family: "Pressura", monospace; font-weight: 900; font-size: 12px; padding: 5px
                         }
@@ -48,13 +44,113 @@
                             padding: 2px; padding-right: 8px;
                         }
                     </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+<style>
+input[type=range] {
+  width: 100%;
+  margin: 14px 0;
+  background-color: transparent;
+  -webkit-appearance: none;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  background: #ffffff;
+  border: 0;
+  border-radius: 25px;
+  width: 100%;
+  height: 7px;
+  cursor: pointer;
+}
+input[type=range]::-webkit-slider-thumb {
+  margin-top: -14px;
+  width: 15px;
+  height: 35px;
+  background: rgba(255, 255, 255, 0.9);
+  border: 2.1px solid rgba(129, 129, 129, 0.8);
+  border-radius: 4px;
+  cursor: pointer;
+  -webkit-appearance: none;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #ffffff;
+}
+input[type=range]::-moz-range-track {
+  background: #ffffff;
+  border: 0;
+  border-radius: 25px;
+  width: 100%;
+  height: 7px;
+  cursor: pointer;
+}
+input[type=range]::-moz-range-thumb {
+  width: 15px;
+  height: 35px;
+  background: rgba(255, 255, 255, 0.9);
+  border: 2.1px solid rgba(129, 129, 129, 0.8);
+  border-radius: 4px;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  background: transparent;
+  border-color: transparent;
+  border-width: 15px 0;
+  color: transparent;
+  width: 100%;
+  height: 7px;
+  cursor: pointer;
+}
+input[type=range]::-ms-fill-lower {
+  background: #f2f2f2;
+  border: 0;
+  border-radius: 50px;
+}
+input[type=range]::-ms-fill-upper {
+  background: #ffffff;
+  border: 0;
+  border-radius: 50px;
+}
+input[type=range]::-ms-thumb {
+  width: 15px;
+  height: 35px;
+  background: rgba(255, 255, 255, 0.9);
+  border: 2.1px solid rgba(129, 129, 129, 0.8);
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 0px;
+  /*Needed to keep the Edge thumb centred*/
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #ffffff;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #ffffff;
+}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-</head>
+#slider-value {
+    font-family: monospace;
+    font-weight: 900;
+    color: white;
+    }
+
+body {
+background-color: black;
+}
+
+.legend {
+font-family: monospace;
+font-weight: 900;
+background-color: rgba(255,255,255,0.5);
+border-radius: 5px;
+}
+
+#map_88dc0f05dae54f55a8927d640ca3bbc7 {
+background-color: black;
+}
+</style></head>
 <body>
-
-            <div class="folium-map" id="map_88dc0f05dae54f55a8927d640ca3bbc7" ></div>
-
+<div class="folium-map" id="map_88dc0f05dae54f55a8927d640ca3bbc7"></div>
 </body>
 <script>
 
