--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <body>
     <div class="box">
       <h1>Infection Rates by State</h1>
-      <iframe src="rates.html" frameborder="0" scrolling="no" width="800" height="500" align="top"> </iframe>
+      <iframe src="styled.html" frameborder="0" scrolling="no" width="800" height="500" align="top"> </iframe>
     </div>
 
     <div class="box">
       <h1>Infection Counts by State (coming soon)</h1>
-      <iframe src="rates.html" frameborder="0" scrolling="no" width="800" height="500" align="bottom"></iframe>
+      <iframe src="styled.html" frameborder="0" scrolling="no" width="800" height="500" align="bottom"></iframe>
     </div>
   </body>
 </html>
