Parameterize notebook for different map types
Instead of just creating a map for infection percentages, map-viz.ipynb
now accepts either "rates" or "counts" to generate the corresponding
interactive map. As I repurposed the notebook, I also made some
rearrangements for clarity.

Additionally in this commit:
- Fix selector bug in tweak_style
- Update index.html to include both map types
- Generate iframe sources (styled_counts.html and styled_rates.html)

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </div>
 
     <div class="box">
-      <h1>Infection Counts by State (coming soon)</h1>
-      <iframe src="styled_rates.html" frameborder="0" scrolling="no" width="800" height="500" align="bottom"></iframe>
+      <h1>Infection Counts by State</h1>
+      <iframe src="styled_counts.html" frameborder="0" scrolling="no" width="800" height="500" align="bottom"></iframe>
     </div>
   </body>
 </html>
