Add page links and reorganize
Added the grid animation to the viz collection. Grouped html pages all in one
place to declutter. Modified some of the styles as needed. Changed index to
a nav/landing page rather than a single page with all the iframes.

--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Coronavirus in Prisons</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="site-pages/style.css">
   </head>
   <body>
     <div class="box">
-      <h1>Infection Rates by State</h1>
-      <iframe src="styled_rates.html" frameborder="0" scrolling="no" width="800" height="500" align="top"> </iframe>
+      <h1>Prison vs Overall</h1>
+      <a href="site-pages/cp-grids.html"><img src="thumbnails/cp-grids.png" alt="Prison Rate vs Overall Rate" style="width:300px;height:100%;"></a>
     </div>
 
     <div class="box">
-      <h1>Infection Counts by State</h1>
-      <iframe src="styled_counts.html" frameborder="0" scrolling="no" width="800" height="500" align="bottom"></iframe>
+      <h1>Infection Rates Map</h1>
+      <a href="site-pages/styled_rates.html"><img src="thumbnails/rates.png" alt="Infection Rates by State" style="width:300px;height:100%;"></a>
     </div>
+
+    <div class="box">
+      <h1>Infection Counts Map</h1>
+      <a href="site-pages/styled_counts.html"><img src="thumbnails/counts.png" alt="Infection Counts by State" style="width:300px;height:100%;"></a>
+    </div>
+
   </body>
 </html>
